adds guide to readme + adds license

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
   "[json]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
+  "[markdown]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
   "typescript.reportStyleChecksAsWarnings": false,
   "prettier.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib"
