--- a/biome.json
+++ b/biome.json
@@ -1,15 +1,27 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
-	"organizeImports": {
-		"enabled": true
+	"$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "on"
+			}
+		}
 	},
 	"linter": {
 		"enabled": true,
-		"ignore": ["**/*.type-test.ts"],
 		"rules": {
 			"recommended": true,
 			"suspicious": {
 				"noExplicitAny": "off"
+			},
+			"complexity": {
+				"noBannedTypes": "off"
+			},
+			"correctness": {
+				"useYield": "off"
+			},
+			"style": {
+				"noNonNullAssertion": "off"
 			}
 		}
 	},
@@ -20,6 +32,6 @@
 		"defaultBranch": "main"
 	},
 	"files": {
-		"include": ["src/**/*"]
+		"includes": ["src/**/*"]
 	}
 }
