adds various examples, optional transformError callback to Result.wrap, and allows Result.gen/Result.genCatching to take an generator directly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
 		"outDir": "dist",
 		"sourceMap": true,
 		"lib": ["ESNext"],
-		"stripInternal": true
-	}
+		"stripInternal": true,
+		"paths": {
+			"typescript-result": ["./src/index.ts"],
+		}
+	},
 }
