--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": false,
 	"name": "typescript-result",
-	"version": "3.3.0",
+	"version": "3.4.0-beta.1",
 	"description": "A Result type inspired by Rust and Kotlin that leverages TypeScript's powerful type system to simplify error handling and make your code more readable and maintainable.",
 	"keywords": [
 		"result",
@@ -62,6 +62,7 @@
 		"@types/node": "^24.0.8",
 		"@vitest/coverage-v8": "^3.2.4",
 		"husky": "^9.1.7",
+		"terser": "^5.43.1",
 		"tsup": "^8.5.0",
 		"typescript": "^5.8.3",
 		"vitest": "^3.2.4",
