separates result creation into own factory class

--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,8 @@
 				"noExplicitAny": "off"
 			},
 			"complexity": {
-				"noBannedTypes": "off"
+				"noBannedTypes": "off",
+				"noStaticOnlyClass": "off"
 			},
 			"correctness": {
 				"useYield": "off"
