moves docs to own website

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,9 @@
   "[markdown]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
+  "[vue]": {
+    "editor.defaultFormatter": "Vue.volar",
+  },
   "typescript.reportStyleChecksAsWarnings": false,
   "prettier.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib"
