--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,20 +7,30 @@ on:
 
 concurrency:
   cancel-in-progress: true
-  group: merge-${{ github.ref }}
+  group: ${{ github.ref }}
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  BuildApp:
+  test-and-build:
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
       - name: Install dependencies
         run: npm ci
@@ -39,3 +49,27 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Typedoc
+        run: npm run predocs
+
+      - name: Build docs
+        run: npm run build:docs
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs/.vitepress/dist
+
+  deploy-docs:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: test-and-build
+    if: github.ref_name == 'master'
+    runs-on: ubuntu-latest
+    name: Deploy docs to GitHub Pages
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
