--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "typescript-result",
-  "version": "3.5.2",
+  "version": "3.5.3-beta.1",
   "description": "Supercharge your TypeScript error handling with a powerful Result type that transforms chaotic try-catch blocks into elegant, type-safe code.",
   "keywords": [
     "result",
